--- a/Web-App.csproj
+++ b/Web-App.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Web_App</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
+  </ItemGroup>
+
 </Project>
