--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,6 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "HaBuddies",
     "PostCollectionName": "Posts"
-  }
+  },
+  "JWTSecretKey": "12345"
 }
