--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,6 @@
   "HaBuddiesDatabase": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "HaBuddies",
-    "PostCollectionName": "Posts"
+    "PostsCollectionName": "Posts"
   }
 }
