fix(Auth): Can't access service and return jwt

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,5 @@
     "DatabaseName": "HaBuddies",
     "PostCollectionName": "Posts"
   },
-  "JWTSecretKey": "12345"
+  "JWTSecretKey": "85256f8a0544ceb62b7d7f90aab7ddc4"
 }
