feat(Post): add Cron

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,6 @@
   "AllowedHosts": "*",
   "HaBuddiesDatabase": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "HaBuddies",
-    "PostsCollectionName": "Posts"
+    "DatabaseName": "HaBuddies"
   }
 }
