--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "HaBuddiesDatabase": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://mongo:27017",
     "DatabaseName": "HaBuddies"
   },
   "JWTSecretKey": "85256f8a0544ceb62b7d7f90aab7ddc4"
