fix(DB): update database connection string

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "HaBuddiesDatabase": {
-    "ConnectionString": "mongodb://mongo:27017",
+    "ConnectionString": "mongodb+srv://pookantongp:pookantong123456789@cluster0.idoc0yf.mongodb.net/",
     "DatabaseName": "HaBuddies"
   },
   "JWTSecretKey": "85256f8a0544ceb62b7d7f90aab7ddc4"
